--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,12 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Entradas Teatro</title>
+    <title>Latidos de la Historia</title>
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
-  <body>
+  <body class="bg-gray-100 min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
